# database

./: Cargo.toml  basic.jq  batch.sh  ci.sh  ci.sql  file-tree.jq  home.jq  memo.md  os-checker.json  push.sh  target-triples.jq  ui.json
batch/: batch_1.json  batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json  batch_19.json  batch_2.json  batch_20.json  batch_21.json  batch_22.json  batch_23.json  batch_24.json  batch_25.json  batch_26.json  batch_27.json  batch_28.json  batch_29.json  batch_3.json  batch_30.json  batch_31.json  batch_32.json  batch_33.json  batch_34.json  batch_35.json  batch_36.json  batch_37.json  batch_38.json  batch_39.json  batch_4.json  batch_40.json  batch_41.json  batch_42.json  batch_43.json  batch_44.json  batch_45.json  (+36 more)
db/: Cargo.toml
db/src/: main.rs
db/tests/: test.md  (+3 more)
file-tree/: 0_All-Targets.jq  1_array-of-target-triples.jq  run.sh  shared.jq
home/: 0_all-target-triples.jq  1_array-of-target-triples.jq  run.sh  shared.jq
jq/: basic_.jq  file-tree-count.jq  home-expanded.jq  home.jq  utils.jq
repos/: basic.jq  run.jq  run.sh
sql/: 2_user-repo-package-file-count.sql  3_user-repo-package-file-raw-reports.sql  read-json.sql  user-repo-package-count.sql
src/: main.rs  utils.rs
tmp/: os-checker.json  post-issue.sh  tmp.jq  tmp.json  tmp.md
ui/: basic.json  file-tree.json  home.json  pass_count_repo.json  target-triple.json  user-repo-package-count.json  user-repo-package-file-count.json  user-repo-package-file-raw-reports.json  user_repo.json
(+3014 files in other folders)
