[package]
name = "os-checker-database"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
camino = { version = "1.1", features = ["serde1"] }
hashbrown = { version = "0.14", features = ["default"]}
indexmap = { version = "2.4.0", features = ["serde"] }
itertools = "0.13.0"
os-checker-types = { git = "https://github.com/os-checker/os-checker.git", rev = "0f67108" }
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 

[features]
default = ["single"]
single = []
batch = []

[workspace]
